--- a/package.json
+++ b/package.json
@@ -16,5 +16,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "http://projects.delimited.io/experiments/d3-threejs"
+  "homepage": "http://https://owidder.github.io/radAR/build"
 }
