--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@argonjs/argon": "^1.4.0-58",
     "d3": "^4.10.2",
+    "lodash": "^4.17.4",
     "three": "^0.87.1"
   },
   "devDependencies": {
