--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@argonjs/argon": "^1.4.0-58",
     "d3": "^4.10.2",
     "lodash": "^4.17.4",
-    "three": "^0.87.1"
+    "three": "^0.87.1",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "express": "^4.16.2",
