--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@argonjs/argon": "^1.4.0-58",
     "d3": "^4.10.2",
+    "kute.js": "^1.6.5",
     "lodash": "^4.17.4",
+    "opentype.js": "^0.7.3",
     "three": "^0.87.1",
     "url": "^0.11.0"
   },
