--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
-  "homepage": "http://https://owidder.github.io/radAR/build",
+  "homepage": "https://owidder.github.io/radAR/build",
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}"
