--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
   },
   "devDependencies": {
     "express": "^4.16.2",
-    "pem": "^1.12.3"
+    "pem": "^1.12.3",
+    "script-loader": "^0.7.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
