--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "webpack": "3.5.1",
     "webpack-dev-server": "2.7.1",
     "webpack-manifest-plugin": "1.2.1",
-    "websocket": "^1.0.25",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "ws": "^4.0.0"
   },
   "devDependencies": {
     "express": "^4.16.2",
