--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "dependencies": {
     "@argonjs/argon": "^1.4.0-58",
+    "@tweenjs/tween.js": "^17.2.0",
     "animejs": "^2.2.0",
     "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
