--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery": "^3.2.1",
     "kute.js": "^1.6.5",
     "lodash": "^4.17.4",
+    "loglevel": "^1.6.1",
     "materialize-css": "^0.100.2",
     "object-assign": "4.1.1",
     "opentype.js": "^0.7.3",
