--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "three": "^0.87.1",
+    "tooltip.js": "^1.1.7",
     "url": "^0.11.0",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
