--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "jquery": "^3.2.1",
+    "keyboardjs": "^2.4.1",
     "kute.js": "^1.6.5",
     "lodash": "^4.17.4",
     "loglevel": "^1.6.1",
