--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
+    "protip": "^1.4.16",
     "react-dev-utils": "^4.0.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
