--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "promise": "8.0.1",
     "protip": "^1.4.16",
     "react-dev-utils": "^4.0.1",
+    "sprintf-js": "^1.1.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "three": "^0.87.1",
