--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
   "proxy": {
     "/public": {
       "target": "http://localhost:3000",
-      "pathRewrite": {"^/public": ""},
+      "pathRewrite": {
+        "^/public": ""
+      },
       "changeOrigin": true
     }
   },
